[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arceion-zorion"
version = "0.1.0"
description = "Arceion Zorion - Django Microservices Framework with utilities, decorators, middleware, and ORM integration for independent microservices"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Arceion", email = "arceionll@gmail.com"}]
keywords = ["django", "microservices", "framework", "rest", "api"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.14.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.2",
    "split-settings>=1.0.0,<2.0.0",
    "whitenoise>=6.5.0",
    "django-cors-headers>=4.0.0",
    "django-filter>=24.0.0",
    "djangorestframework-simplejwt>=5.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Arceion/arceion-zorion"
Repository = "https://github.com/Arceion/arceion-zorion.git"
Documentation = "https://github.com/Arceion/arceion-zorion/wiki"
Issues = "https://github.com/Arceion/arceion-zorion/issues"

[tool.setuptools]
packages = ["arceion", "arceion.zorion"]
include-package-data = true

[tool.black]
line-length = 119
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
  | migrations
)/
'''

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "COM", "C4", "PIE", "T20", "ARG", "BLE", "RUF"]
ignore = ["E501", "E741", "F403", "F405"]
exclude = ["*/migrations/*", "*/pycache/*", "*/.venv/*"]

[tool.ruff.lint.isort]
known-first-party = ["arceion"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations/", "__pycache__/"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["arceion/zorion/tests"]
addopts = "--tb=short -p no:django"
